--- a/snake.html
+++ b/snake.html
@@ -69,7 +69,7 @@
         y: 320
     };
 
-    var colors = ["blue", "red", "green", "yellow", "purple", "fuchsia",];
+    var colors = ["blue", "red",  "white", ];
 
 
     function randompos(min, max) {
